apps/sabnzbd/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.${DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      services:
        - name: authentik-server
          namespace: auth
          port: http
    - match: Host(`sabnzbd.${DOMAIN}`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
    - match: Host(`sabnzbd.${DOMAIN}`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
      middlewares:
        - name: authentik
          namespace: traefik
